--- a/analiseficha.html
+++ b/analiseficha.html
@@ -766,57 +766,55 @@ async function abrirModal(p){
   pratoAtual = p;
   modal.style.display = "flex";
   document.body.style.overflow = "hidden";
-
-  // foto com fallback
-  mFoto.src = p.foto_url || "https://placehold.co/600x400?text=Sem+Foto";
-
+mFoto.src = p.foto_url || "https://placehold.co/600x400?text=Sem+Foto";  await carregarTipos();
   /* INGREDIENTES */
-  const { data: itens } = await sb
-    .from("buffet_itens")
-    .select(`
-      id,
-      nome,
-      quantidade,
-      unidade_uso,
-      custo_unitario,
-      custo_calculado,
-      produto:produtos (
-        energia_kcal,
-        carboidratos,
-        proteinas,
-        gorduras_totais,
-        fibra_alimentar,
-        sodio_mg
-      )
-    `)
-    .eq("buffet_id", p.id);
+const { data: itens } = await sb
+  .from("buffet_itens")
+  .select(`
+    id,
+    nome,
+    quantidade,
+    unidade_uso,
+    custo_unitario,
+    custo_calculado,
+    produto:produtos (
+      energia_kcal,
+      carboidratos,
+      proteinas,
+      gorduras_totais,
+      fibra_alimentar,
+      sodio_mg
+    )
+  `)
+  .eq("buffet_id", p.id);
 
-  // ===============================
-  // CALCULO FICHA NUTRICIONAL
-  // ===============================
-  const nutri = {
-    calorias: 0,
-    carboidratos: 0,
-    proteinas: 0,
-    gorduras: 0,
-    fibras: 0,
-    sodio: 0
-  };
+// ===============================
+// CALCULO FICHA NUTRICIONAL
+// ===============================
+const nutri = {
+  calorias: 0,
+  carboidratos: 0,
+  proteinas: 0,
+  gorduras: 0,
+  fibras: 0,
+  sodio: 0
+};
 
-  (itens || []).forEach(i => {
-    const qtd = Number(i.quantidade || 0);
-    const prod = i.produto;
-    if (!prod) return;
+(itens || []).forEach(i => {
+  const qtd = Number(i.quantidade || 0);
+  const prod = i.produto;
+  if (!prod) return;
 
-    nutri.calorias     += Number(prod.energia_kcal || 0) * qtd;
-    nutri.carboidratos += Number(prod.carboidratos || 0) * qtd;
-    nutri.proteinas    += Number(prod.proteinas || 0) * qtd;
-    nutri.gorduras     += Number(prod.gorduras_totais || 0) * qtd;
-    nutri.fibras       += Number(prod.fibra_alimentar || 0) * qtd;
-    nutri.sodio        += Number(prod.sodio_mg || 0) * qtd;
-  });
+  nutri.calorias     += Number(prod.energia_kcal || 0) * qtd;
+  nutri.carboidratos += Number(prod.carboidratos || 0) * qtd;
+  nutri.proteinas    += Number(prod.proteinas || 0) * qtd;
+  nutri.gorduras     += Number(prod.gorduras_totais || 0) * qtd;
+  nutri.fibras       += Number(prod.fibra_alimentar || 0) * qtd;
+  nutri.sodio        += Number(prod.sodio_mg || 0) * qtd;
+});
 
-  const cmvBase = (itens || []).reduce(
+
+  const cmvBase = itens.reduce(
     (s,i)=>s + Number(i.custo_calculado||0),0
   );
 
@@ -840,151 +838,478 @@ async function abrirModal(p){
   const lucro = precoVenda ? precoVenda - cmvFinal : 0;
   const margem = precoVenda ? (lucro/precoVenda)*100 : 0;
 
-  // HEADER DO MODAL
-  mHeader.innerHTML = `
-    <h2>${p.nome}</h2>
-    <div class="badges primary">
-      <span class="badge">${p.tipo || "-"}</span>
-      <span class="badge" style="background:#dcfce7;color:#166534">
-        💰 Venda ${moeda(precoVenda)}
+mHeader.innerHTML = `
+  <h2>${p.nome}</h2>
+
+  <div class="badges primary">
+    <span class="badge">${p.tipo || "-"}</span>
+
+    <span class="badge" style="background:#dcfce7;color:#166534">
+      💰 Venda ${moeda(precoVenda)}
+    </span>
+
+    <span class="badge" style="background:#eef2ff;color:#3730a3">
+      🧾 Custo ${moeda(cmvFinal)}
+    </span>
+
+    <span class="badge" style="
+      background:${margem < 30 ? '#fee2e2' : '#dcfce7'};
+      color:${margem < 30 ? '#991b1b' : '#166534'}">
+      📈 Margem ${margem.toFixed(1)}%
+    </span>
+  </div>
+`;
+
+
+mBody.innerHTML = `
+<h3>Descrição do prato (texto do cardápio)</h3>
+
+<textarea
+  id="descricaoPrato"
+  placeholder="Ex: Salmão grelhado com arroz japonês e molho teriyaki."
+  style="
+    width:100%;
+    min-height:70px;
+    padding:14px;
+    border-radius:14px;
+    border:1px solid var(--border);
+    font-size:14px;
+    font-family:Inter,sans-serif;
+    resize:vertical;
+  "
+>${p.descricao || ""}</textarea>
+
+<div style="margin:14px 0">
+  <label style="font-weight:800;font-size:13px">
+    STATUS DO PRATO
+  </label>
+
+  <select id="statusPrato" style="margin-top:6px">
+    <option value="true">ATIVO</option>
+    <option value="false">DESATIVADO</option>
+  </select>
+</div>
+
+  <div style="margin:12px 0">
+    <label style="font-weight:800;font-size:13px">
+      FOTO DO PRATO
+    </label>
+
+    <input
+      type="file"
+      id="fotoPrato"
+      accept="image/*"
+      style="margin-top:6px"
+    >
+  </div>
+
+  <p><b>CUSTO BASE:</b> ${moeda(cmvBase)}</p>
+  <p><b>IMPOSTOS E CUSTOS OPERACIONAIS:</b> ${moeda(totalImpostos)}</p>
+  <p><b>CUSTO FINAL:</b> ${moeda(cmvFinal)}</p>
+
+  <hr>
+  <h3>Tipo do prato</h3>
+
+<select id="tipoPrato">
+  <option value="">SELECIONE</option>
+</select>
+
+  <hr>
+<hr>
+
+<h3>Preço ideal</h3>
+
+<div class="precificacao">
+  <label style="font-weight:800;font-size:13px">
+    💡 PREÇO IDEAL (R$)
+  </label>
+
+  <input
+    id="precoIdealInput"
+    type="number"
+    step="0.01"
+    placeholder="Ex: 29.90"
+    value="${p.preco_ideal || ""}"
+    style="margin-top:8px"
+  >
+
+  <small style="color:var(--muted)">
+    Valor de referência ideal (salva automaticamente).
+  </small>
+</div>
+
+
+  <h3>Precificação</h3>
+<div style="display:grid;grid-template-columns:1fr 1fr;gap:10px">
+  <input id="markupPerc" type="number" step="0.01" placeholder="Markup (%)">
+  <input id="precoVendaInput" type="number" step="0.01" placeholder="Preço de venda (R$)">
+</div>
+
+<p id="previewPreco" style="margin-top:8px;font-size:13px;font-weight:700;color:#166534"></p>
+
+
+  <button class="btn-add" style="margin-top:10px"
+    onclick="salvarPrecoVenda(${cmvFinal})">
+    SALVAR PREÇO DE VENDA
+  </button>
+
+${precoVenda ? `
+  <p><b>Preço atual:</b> ${moeda(precoVenda)}</p>
+  <p><b>Lucro:</b> ${moeda(lucro)}</p>
+  <p><b>Margem:</b> ${margem.toFixed(2)}%</p>
+` : ``}
+
+${p.preco_ideal && precoVenda && precoVenda !== p.preco_ideal ? `
+  <p style="
+    margin-top:10px;
+    padding:10px 14px;
+    border-radius:12px;
+    background:#fff7ed;
+    border:1px solid #fed7aa;
+    color:#9a3412;
+    font-weight:800;
+  ">
+    ⚠️ Preço de venda diferente do preço sugerido
+  </p>
+` : ``}
+
+${p.preco_ideal ? `
+  <p><b>Preço ideal:</b> ${moeda(p.preco_ideal)}</p>
+` : ``}
+
+
+
+  <hr>
+
+  <h3>Ingredientes</h3>
+  ${itens.map(i=>`
+    <div class="ing">
+      <span>
+        <b>${i.nome} — ${moeda(i.custo_unitario)}</b><br>
+        <small>${i.quantidade} ${i.unidade_uso}</small>
       </span>
-      <span class="badge" style="background:#eef2ff;color:#3730a3">
-        🧾 Custo ${moeda(cmvFinal)}
-      </span>
-      <span class="badge" style="
-        background:${margem < 30 ? '#fee2e2' : '#dcfce7'};
-        color:${margem < 30 ? '#991b1b' : '#166534'}">
-        📈 Margem ${margem.toFixed(1)}%
-      </span>
+
+      <strong>${moeda(i.custo_calculado)}</strong>
+
+<div style="display:flex;gap:6px;align-items:center">
+<button class="btn-icon btn-edit"
+          onclick="editarIngrediente('${i.id}')">✏️</button>
+        <button class="btn-icon btn-delete"
+          onclick="excluirIngrediente('${i.id}')">🗑️</button>
+      </div>
     </div>
-  `;
+  `).join("")}
 
-  // CORPO DO MODAL
-  mBody.innerHTML = `
-    <h3>Descrição do prato (texto do cardápio)</h3>
-    <textarea id="descricaoPrato"
-      placeholder="Ex: Salmão grelhado com arroz japonês e molho teriyaki."
-      style="width:100%;min-height:70px;padding:14px;border-radius:14px;border:1px solid var(--border);font-size:14px;font-family:Inter,sans-serif;resize:vertical;"
-    >${p.descricao || ""}</textarea>
+  <div class="precificacao">
+    <h3>Novo ingrediente</h3>
 
-    <div style="margin:14px 0">
-      <label style="font-weight:800;font-size:13px">STATUS DO PRATO</label>
-      <select id="statusPrato" style="margin-top:6px">
-        <option value="true">ATIVO</option>
-        <option value="false">DESATIVADO</option>
+    <select id="ingProduto">
+      <option value="">Selecione</option>
+      ${ingredientesBase.map(i=>`
+        <option value="${i.id}"
+          data-custo="${i.valor}"
+          data-unidade="${i.unidade_medida}">
+          ${i.nome}
+        </option>
+      `).join("")}
+    </select>
+
+    <div style="display:grid;grid-template-columns:1fr 1fr;gap:10px">
+      <input id="ingQtd" type="number" step="0.001" placeholder="Quantidade">
+      <input id="ingUnidade" readonly placeholder="Unidade">
+    </div>
+
+    <button class="btn-add" style="margin-top:10px"
+      onclick="salvarIngrediente()">ADICIONAR INGREDIENTE</button>
+  </div>
+
+  <hr>
+
+  <h3>Custos / Impostos</h3>
+  ${impostosCache.map(i=>`
+    <div class="ing">
+      <span>
+        <b>${i.descricao}</b><br>
+        <small>${i.tipo} • ${i.modalidade === "PERCENTUAL" ? i.valor+"%" : moeda(i.valor)}</small>
+      </span>
+      <strong>
+        ${i.modalidade==="PERCENTUAL"
+          ? moeda((cmvBase*i.valor)/100)
+          : moeda(i.valor)}
+      </strong>
+      <button class="btn-icon btn-delete"
+        onclick="excluirImposto('${i.id}')">🗑️</button>
+    </div>
+  `).join("")}
+
+  <div class="precificacao">
+    <h3>Novo custo / imposto</h3>
+
+    <input id="impDesc" placeholder="Descrição">
+
+    <div style="display:grid;grid-template-columns:1fr 1fr;gap:10px">
+      <select id="impTipo">
+        <option value="IMPOSTO">IMPOSTO</option>
+        <option value="CUSTO">CUSTO</option>
+      </select>
+
+      <select id="impModalidade">
+        <option value="FIXO">VALOR FIXO</option>
+        <option value="PERCENTUAL">PERCENTUAL (%)</option>
       </select>
     </div>
 
-    <div style="margin:12px 0">
-      <label style="font-weight:800;font-size:13px">FOTO DO PRATO</label>
-      <input type="file" id="fotoPrato" accept="image/*" style="margin-top:6px">
-    </div>
+    <input id="impValor" type="number" step="0.01" placeholder="Valor">
 
-    <p><b>CUSTO BASE:</b> ${moeda(cmvBase)}</p>
-    <p><b>IMPOSTOS E CUSTOS OPERACIONAIS:</b> ${moeda(totalImpostos)}</p>
-    <p><b>CUSTO FINAL:</b> ${moeda(cmvFinal)}</p>
+    <button class="btn-add" style="margin-top:10px"
+      onclick="salvarImposto()">ADICIONAR</button>
+  </div>
+<hr>
+<hr>
 
-    <hr>
-    <h3>Tipo do prato</h3>
-    <select id="tipoPrato"><option value="">SELECIONE</option></select>
+<h3>Tabela Nutricional (por prato)</h3>
 
-    <hr><hr>
+<div class="precificacao">
+  <p>🔥 Calorias: <b>${nutri.calorias.toFixed(1)} kcal</b></p>
+  <p>🥩 Proteínas: <b>${nutri.proteinas.toFixed(1)} g</b></p>
+  <p>🍞 Carboidratos: <b>${nutri.carboidratos.toFixed(1)} g</b></p>
+  <p>🧈 Gorduras: <b>${nutri.gorduras.toFixed(1)} g</b></p>
+  <p>🌾 Fibras: <b>${nutri.fibras.toFixed(1)} g</b></p>
+  <p>🧂 Sódio: <b>${nutri.sodio.toFixed(1)} mg</b></p>
+</div>
 
-    <h3>Preço ideal</h3>
-    <div class="precificacao">
-      <label style="font-weight:800;font-size:13px">💡 PREÇO IDEAL (R$)</label>
-      <input id="precoIdealInput" type="number" step="0.01" value="${p.preco_ideal || ""}" style="margin-top:8px">
-      <small style="color:var(--muted)">Valor de referência ideal (salva automaticamente).</small>
-    </div>
+<h3>Modo de preparo</h3>
 
-    <h3>Precificação</h3>
-    <div style="display:grid;grid-template-columns:1fr 1fr;gap:10px">
-      <input id="markupPerc" type="number" step="0.01" placeholder="Markup (%)">
-      <input id="precoVendaInput" type="number" step="0.01" placeholder="Preço de venda (R$)">
-    </div>
-    <p id="previewPreco" style="margin-top:8px;font-size:13px;font-weight:700;color:#166534"></p>
+<textarea
+  id="modoPreparo"
+  placeholder="Descreva o modo de preparo do prato..."
+  style="
+    width:100%;
+    min-height:120px;
+    padding:14px;
+    border-radius:14px;
+    border:1px solid var(--border);
+    font-size:14px;
+    font-family:Inter,sans-serif;
+    resize:vertical;
+  "
+>${p.modo_preparo || ""}</textarea>
 
-    <button class="btn-add" style="margin-top:10px" onclick="salvarPrecoVenda(${cmvFinal})">
-      SALVAR PREÇO DE VENDA
-    </button>
 
-    <hr>
-    <h3>Ingredientes</h3>
-    ${(itens||[]).map(i=>`
-      <div class="ing">
-        <span>
-          <b>${i.nome} — ${moeda(i.custo_unitario)}</b><br>
-          <small>${i.quantidade} ${i.unidade_uso}</small>
-        </span>
-        <strong>${moeda(i.custo_calculado)}</strong>
-        <div style="display:flex;gap:6px;align-items:center">
-          <button class="btn-icon btn-edit" onclick="editarIngrediente('${i.id}')">✏️</button>
-          <button class="btn-icon btn-delete" onclick="excluirIngrediente('${i.id}')">🗑️</button>
-        </div>
-      </div>
-    `).join("")}
-  `;
-
-  // 🔁 AGORA O SELECT EXISTE → CARREGA TIPOS
-  await carregarTipos();
-
-  // seta tipo atual + salva mudança
+  
+`;
+setTimeout(() => {
   const selectTipo = document.getElementById("tipoPrato");
-  if (selectTipo) {
-    selectTipo.value = p.tipo || "";
-    selectTipo.onchange = async () => {
-      const tipo = selectTipo.value;
-      if (!tipo) return;
+  if (!selectTipo) return;
 
-      await sb.from("buffet").update({ tipo }).eq("id", pratoAtual.id);
-      await carregarPratos();
-      renderLista();
-    };
+  if (p.tipo) {
+    selectTipo.value = p.tipo;
   }
 
-  // STATUS
-  const statusSelect = document.getElementById("statusPrato");
-  if (statusSelect) {
-    statusSelect.value = p.ativo === false ? "false" : "true";
-    statusSelect.onchange = async () => {
-      const ativo = statusSelect.value === "true";
-      await sb.from("buffet").update({ ativo }).eq("id", pratoAtual.id);
-      await carregarPratos();
-      renderLista();
-    };
-  }
+  selectTipo.onchange = async () => {
+    const tipo = selectTipo.value;
+    if (!tipo) return;
 
-  // UPLOAD FOTO
+    await sb
+      .from("buffet")
+      .update({ tipo })
+      .eq("id", pratoAtual.id);
+
+    await carregarPratos();
+    renderLista();
+  };
+}, 0);
+setTimeout(() => {
   const inputFoto = document.getElementById("fotoPrato");
-  if (inputFoto) {
-    inputFoto.onchange = async () => {
-      const file = inputFoto.files[0];
-      if (!file) return;
+  if (!inputFoto) return;
 
-      const ext = file.name.split(".").pop();
-      const fileName = `${pratoAtual.id}.${ext}`;
+  inputFoto.onchange = async () => {
+    const file = inputFoto.files[0];
+    if (!file) return;
 
-      const { error: uploadError } = await sb.storage
-        .from("buffet")
-        .upload(fileName, file, { upsert: true });
+    const ext = file.name.split(".").pop();
+    const fileName = `${pratoAtual.id}.${ext}`;
 
-      if (uploadError) return alert("Erro ao enviar imagem");
+    const { error: uploadError } = await sb.storage
+      .from("buffet")
+      .upload(fileName, file, { upsert: true });
 
-      const { data } = sb.storage.from("buffet").getPublicUrl(fileName);
-      const fotoUrl = data.publicUrl;
+    if (uploadError) {
+      alert("Erro ao enviar imagem");
+      return;
+    }
 
-      await sb.from("buffet").update({ foto_url: fotoUrl }).eq("id", pratoAtual.id);
-      mFoto.src = fotoUrl;
+    const { data } = sb.storage
+      .from("buffet")
+      .getPublicUrl(fileName);
 
-      await carregarPratos();
-      renderLista();
-    };
+    const fotoUrl = data.publicUrl;
+
+    await sb
+      .from("buffet")
+      .update({ foto_url: fotoUrl })
+      .eq("id", pratoAtual.id);
+
+    mFoto.src = fotoUrl;
+
+    await carregarPratos();
+    renderLista();
+  };
+}, 0);
+
+  setTimeout(() => {
+    const selectTipo = document.getElementById("tipoPrato");
+    if (selectTipo && p.tipo) {
+      selectTipo.value = p.tipo;
+    }
+  }, 0);
+setTimeout(() => {
+  const statusSelect = document.getElementById("statusPrato");
+  if (!statusSelect) return;
+
+  statusSelect.value = p.ativo === false ? "false" : "true";
+
+  statusSelect.onchange = async () => {
+    const ativo = statusSelect.value === "true";
+
+    await sb
+      .from("buffet")
+      .update({ ativo })
+      .eq("id", pratoAtual.id);
+
+    await carregarPratos();
+    renderLista();
+  };
+}, 0);
+setTimeout(() => {
+  const mp = document.getElementById("modoPreparo");
+  if (!mp) return;
+
+  const valorInicial = (p.modo_preparo || "").trim();
+
+  mp.onblur = async () => {
+    const textoAtual = mp.value.trim();
+
+    // ❌ não mudou → não salva
+    if (textoAtual === valorInicial) return;
+
+    await sb
+      .from("buffet")
+      .update({ modo_preparo: textoAtual })
+      .eq("id", pratoAtual.id);
+  };
+}, 0);
+
+
+setTimeout(() => {
+  const desc = document.getElementById("descricaoPrato");
+  if (!desc) return;
+
+  const valorInicial = (p.descricao || "").trim();
+
+  desc.onblur = async () => {
+    const textoAtual = desc.value.trim();
+    if (textoAtual === valorInicial) return;
+
+    await sb
+      .from("buffet")
+      .update({ descricao: textoAtual })
+      .eq("id", pratoAtual.id);
+
+    await carregarPratos();
+    renderLista();
+  };
+}, 0);
+
+setTimeout(async () => {
+  const input = document.getElementById("precoIdealInput");
+  if (!input) return;
+
+  const valorInicial = Number(p.preco_ideal || 0);
+
+  // 🔐 busca o usuário direto do Supabase (SEM race condition)
+  const { data: { user } } = await sb.auth.getUser();
+  const email = user?.email || null;
+
+  console.log("🔐 EMAIL NO MODAL:", email);
+
+  const autorizado =
+    email && EMAILS_AUTORIZADOS_PRECO_IDEAL.includes(email);
+
+  if (!autorizado) {
+    input.readOnly = true;
+    input.style.opacity = "0.6";
+    input.title =
+      "Apenas usuários autorizados podem alterar o preço sugerido";
+    return;
   }
-}
+
+  // ✅ autorizado → salva automático
+  input.onblur = async () => {
+    const novoValor = Number(input.value || 0);
+
+    if (novoValor === valorInicial) return;
+
+    if (novoValor <= 0) {
+      alert("Preço ideal inválido");
+      input.value = valorInicial || "";
+      return;
+    }
+
+    await sb
+      .from("buffet")
+      .update({ preco_ideal: novoValor })
+      .eq("id", pratoAtual.id);
+
+    await carregarPratos();
+  };
+}, 0);
 
 
+setTimeout(() => {
+  const mkInput = document.getElementById("markupPerc");
+  const precoInput = document.getElementById("precoVendaInput");
+  const preview = document.getElementById("previewPreco");
 
+  function atualizarPorMarkup() {
+    const mk = Number(mkInput.value || 0);
+    if (mk <= 0) return;
 
+    const preco = cmvFinal * (1 + mk / 100);
+    precoInput.value = preco.toFixed(2);
+
+    const lucro = preco - cmvFinal;
+    const margem = (lucro / preco) * 100;
+
+    preview.innerHTML = `
+      Preço: <b>${moeda(preco)}</b> •
+      Lucro: <b>${moeda(lucro)}</b> •
+      Margem: <b>${margem.toFixed(1)}%</b>
+    `;
+  }
+
+  function atualizarPorPreco() {
+    const preco = Number(precoInput.value || 0);
+    if (preco <= cmvFinal) return;
+
+    const mk = ((preco - cmvFinal) / cmvFinal) * 100;
+    mkInput.value = mk.toFixed(2);
+
+    const lucro = preco - cmvFinal;
+    const margem = (lucro / preco) * 100;
+
+    preview.innerHTML = `
+      Markup: <b>${mk.toFixed(1)}%</b> •
+      Lucro: <b>${moeda(lucro)}</b> •
+      Margem: <b>${margem.toFixed(1)}%</b>
+    `;
+  }
+
+  mkInput.oninput = atualizarPorMarkup;
+  precoInput.oninput = atualizarPorPreco;
+}, 50);
+
+} // ✅ FECHA abrirModal(p)
 
 
 /* =====================================================
